@@ -4,6 +4,7 @@
 -Added collection/packet_capture for netsh event tracing
 -Added management/zipfolder for native folder compression
 -Corrected menu behavior on agent exit, bug fix on some dir behavior
+-Started porting native shell commands to WMI in the agent core
 
 ============
 8/16/2015 - RELEASE 1.1
